--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 html, body {
     height: 100%;
+    font-family: arial, sans-serif;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 #window {
@@ -7,4 +12,25 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 1rem 0 1rem;
+}
+
+.nav-bar-link {
+    text-decoration: none;
+    color: #3f3f3f;
+    margin-left: 1rem;
+    font-size: 0.8rem;
+}
+
+.btn-blue {
+    border: none;
+    padding: 0.5rem 0.75rem;
+    color: rgb(255, 255, 255);
+    background-color: #4386f9;
 }
