Style main content

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 1rem 1rem 0 1rem;
+    margin: 1rem 2rem 0 1rem;
 }
 
 .nav-bar-link {
@@ -28,9 +28,53 @@ a:hover {
     font-size: 0.8rem;
 }
 
-.btn-blue {
+.btn {
     border: none;
+    border-radius: 0.2rem;
+}
+
+.btn-blue {
+    color: #fff;
     padding: 0.5rem 0.75rem;
-    color: rgb(255, 255, 255);
     background-color: #4386f9;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 2rem 20rem 2rem;
+}
+
+.main-section {
+    margin-bottom: 1.5rem;
+}
+
+#searchbar {
+    width: 450px;
+    border: 1px solid #dfe1e5;
+    border-radius: 2rem;
+    padding: 0.75rem 1rem;
+}
+
+#searchbar:hover {
+    box-shadow: 1px 1px 6px #dfe1e5;
+}
+
+input[type=text] {
+    border: none;
+    margin-left: 1rem;
+}
+
+.btn-gray {
+    font-size: 0.9rem;
+    cursor: pointer;
+    border: 1px solid #fff;
+    padding: 0.5rem 1rem;
+}
+
+.btn-gray:hover {
+    border-color: #dfe1e5;
+    background-color: #f6f5f4;
+    box-shadow: 1px 1px 1px #dfe1e5;
 }
