--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html, body {
     font-family: arial, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 a:hover {
     text-decoration: underline;
 }
@@ -18,14 +22,13 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 1rem 2rem 0 1rem;
+    padding: 0.75rem 1rem;
 }
 
-.nav-bar-link {
-    text-decoration: none;
+.nav-top-link {
     color: #3f3f3f;
-    margin-left: 1rem;
     font-size: 0.8rem;
+    margin: 0.25rem 0.5rem;
 }
 
 .btn {
@@ -77,4 +80,21 @@ input[type=text] {
     border-color: #dfe1e5;
     background-color: #f6f5f4;
     box-shadow: 1px 1px 1px #dfe1e5;
+}
+
+.nav-footer {
+    background-color: #f2f2f2;
+    border-top: 1px solid #dfe1e5;
+    padding-left: 2rem;
+}
+
+.nav-footer-link {
+    margin-right: 1.5rem;
+    font-size: 0.9rem;
+    color: #70757a;
+}
+
+#leaf {
+    height: 14px;
+    width: 13px;
 }
